<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/info_dialog_image_content_description"
            android:paddingBottom="@dimen/vertical_margin"
            android:src="@drawable/ic_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dialog_control_title"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/vertical_margin"
            android:text="@string/info_dialog_control_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dialog_description_title"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_dialog_description_message" />
    </LinearLayout>

</ScrollView>