<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/vertical_margin"
    android:paddingLeft="@dimen/horizontal_margin"
    android:paddingRight="@dimen/horizontal_margin"
    android:paddingTop="@dimen/vertical_margin" >

    <!-- Beginner best score -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/textPadding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/best_scores_beginner" />

        <TextView
            android:id="@+id/best_scrores_beginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical" />
    </TableRow>

    <!-- Intermediate best score -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/textPadding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/best_scores_intermediate" />

        <TextView
            android:id="@+id/best_scrores_intermediate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical" />
    </TableRow>

    <!-- Expert best score -->

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/textPadding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/best_scores_expert" />

        <TextView
            android:id="@+id/best_scrores_expert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical" />
    </TableRow>

</TableLayout>